# s3rver

./: Cargo.toml  README.md  sonar-project.properties
.github/workflows/: ci.yaml
src/: cli.rs  error.rs  http.rs  main.rs  s3.rs
